2001-12-04  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_netutils.c (bk_netutils_start_service_verbose): Null out
	the appropriate things at the appropriate time to avoid double free.

	* libbk: (everwhere) Replace XXX's with standards document
	compliant notation

	* include/libbk.h: Camel case and _e all enums (propogate through
	source files too).
	Change callback_t's to callback_f's (propogate).

2001-11-30  Seth Robertson  <seth@startide.sysdetect.com>

	* README.i18n: Internationalization hints
	* src/proto.c: Internationalized
	* include/libbk_i18n.h: Starting formal internalization support

2001-12-04  James Tanis  <jtt@winwood.sysdetect.com>

	* src/bttcp.c (connect_complete): Check for bag's existence as per
	the API

	* lib/b_netinfo.c (bk_netinfo_from_socket): make sure len is
	initialized (jtt must have dropped this somewhere today).

	* src/bttcp.c (proginit): Patch up old service staring names to
	new. 

	* lib/b_netutils.c (bk_parse_endpt_no_defaults): Convenience
	function for parsing a url with no default values (as in a default
	url).
	(bk_netutils_start_service): Short version of start_servce (old
	version renamed to BLAH_verbose).
	(bk_netutils_make_conn): Short version of make_conn (old version
	renmaed to BLAH_verbose).

	* lib/b_addrgroup.c (net_init_end): Don't bypass callback on error
	(DOH!).

	* src/bttcp.c: Convert to using new event granularity (ie: fix
	timeouts).

2001-12-03  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_netutils.c: Convert to new bk_addrgroup_state_e values.
	(bk_netutils_make_conn): Make sure that values handed over to sss
	are not freed. Make sure that sss is not freed once callback has
	been called (it was freed in the callback).
	(bk_netutils_make_conn): make sure that all temporary values are
	freed. 

	* lib/b_netinfo.c (bk_netinfo_advance_primary_address): Function
	to iterate thru address list, setting each to primary in turn.

	* lib/b_addrgroup.c: Converted state info over to new mode.