@@ -1,3 +1,7 @@
+2001-12-05  James Tanis  <jtt@saint.sysdetect.com>
+
+	* lib/b_config.c: Make sure that bc is checked after SET_CONFIG
+
 2001-12-04  James Tanis  <jtt@winwood.sysdetect.com>
 
 	* lib/b_netutils.c (bk_netutils_start_service_verbose): Null out
